# frame-dash

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.yaml  local.example.yaml  preview.py  pyproject.toml  repository.yaml  requirements.txt  run.sh
frame_dash/: __init__.py  byos.py  config.py  ha_client.py  main.py  renderer.py  samsung.py  webhook.py
frame_dash/templates/: base.html.j2  eink.html.j2
frame_dash/templates/static/: eink.css  style.css
plans/: e-ink.md
translations/: en.yaml
