[project]
name = "frame-dash"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "playwright==1.50.0",
    "samsungtvws[async]==3.0.4",
    "jinja2==3.1.5",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
]

[project.scripts]
frame-dash = "frame_dash.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
